PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-

* Changes since Version 0.4.1:
** Modifications, Fixes and Improvements:
- PEL now enhance Emacs Regular Expression Builder mode by adding the *pel-reb-erase-regxp* command, bound to ~C-c C-d~ in the buffer.
  This command replaces the currently used regular expression string by an empty string.
- Add *pel-show-lisp-control-variables*, bound to ~<f11> ? e a l~.
  This prints the values of lisp.el user-options and variables used by the current buffer.
  It's a tool used to analyze the implementation of various major modes, specially for their handling
  of navigation and marking functions.
- Add more PEL-specific key bindings for tab-bar management: ~⌘T~ (on macOS) and ~M-<f11> M-= M-|~ for *tab-bar-duplicate-tab* on Emacs 28 and later.
  There are several tab specific commends that appeared in Emacs 28 that are not yet documented in PEL.
  Of course their default Emacs key bindings are available.
- Add *pel-comment-dwim* now bound to ~M-;~ to replace *comment-dwim*.
  It does the same as *comment-dwim* except that it supports the ~M-0~ prefix argument to comment
  the current line from the beginning of the line, something that *comment-dwim* should do but currently does not do.
  Also added that capability to *pel-c-comment-dwim* and *pel-erlang-comment-dwim* commands.
- Add *pel-eval-last-sexp-and-copy* command, bound to ~<f12> e e~ in emacs-lisp-mode.
  It does the same as eval-last-sexp but also copies the result to the kill ring, allowing easy
  retrieval in any buffer by yanking it in.
- Add ~<f11> ? e M~ key bindings to *memory-report* on Emacs >= 28.
- Fix & improved *pel-end-of-line*: it no longer moves to the next line when issued from an empty line.
  It also has better, more logical prefix argument: by default it is 0, meaning current line.
  A positive value N identifies N lines forward, a negative N identifies N lines backward.